<resources>
    <string name="app_name">C2</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_mul">x</string>
    <string name="clear">CE</string>
    <string name="btn_back">←</string>
    <string name="btn_add">+</string>
    <string name="btn_sub">-</string>
    <string name="btn_6">6</string>
    <string name="btn_5">5</string>
    <string name="btn_4">4</string>
    <string name="btn_divide">÷</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_point">.</string>
    <string name="btn_0">0</string>
    <string name="btn_den">=</string>
    <string name="text_result">0</string>
    <string name="x2">x^2</string>>
    <string name="genhao">√x</string>>
    <string name="btn_00">00</string>
    <string name="btn_percent">%</string>
    <string name="btn_fenshu">1/x</string>
</resources>