<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:largeScreens="true"
    android:normalScreens="true" android:anyDensity="true"
    android:id="@+id/Calculator"
    >


<LinearLayout
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_weight="3"
        android:gravity="right|center_vertical"
        android:text="@string/text_result"

        android:textColor="@color/darkblue"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"

        />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:columnCount="4"
        android:rowCount="7"
        android:layout_margin="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:onClick="onButtonClick_back"
            android:text="←"
            android:textSize="30dp"
            android:textColor="#03A9F4"
            />

        <Button

            android:layout_gravity="fill"
            android:layout_columnSpan="2"
            android:layout_rowSpan="1"
            android:text="CE"
            android:textColor="#03A9F4"
            android:onClick="onButtonClick_clear"
            android:textSize="30dp"/>
        <Button
            android:layout_gravity="fill"
            android:text="@string/btn_add"
            android:textSize="30dp"
            android:onClick="onButtonClick_add"
            android:textColor="#03A9F4"/>

        <Button
            android:id="@+id/power_1"
            android:text="1/x"
            android:textAllCaps="false"
            android:textSize="30dp"
            android:textColor="#03A9F4"
            android:onClick="onClickedPower"/>

        <Button
            android:id="@+id/power_2"
            android:text="x²"
            android:textAllCaps="false"
            android:textSize="30dp"
            android:textColor="#03A9F4"
            android:onClick="onClickedPower"/>

        <Button
            android:id="@+id/power_3"
            android:text="√x"
            android:textSize="30dp"
            android:textAllCaps="false"
            android:textColor="#03A9F4"
            android:onClick="onClickedPower"/>


        <Button
            android:layout_gravity="fill"
            android:text="@string/btn_sub"
            android:textSize="30dp"
            android:onClick="onButtonClick_sub"
            android:textColor="#03A9F4"/>


        <Button android:text="@string/btn_7"
            android:textSize="30dp"
            android:onClick="onButtonClick_7"
            android:backgroundTint="#ffffff"/>

        <Button android:text="@string/btn_8"
            android:textSize="30dp"
            android:onClick="onButtonClick_8"
            android:backgroundTint="#ffffff"/>

        <Button android:text="@string/btn_9"
            android:textSize="30dp"
            android:onClick="onButtonClick_9"
            android:backgroundTint="#ffffff"/>

        <Button
            android:layout_gravity="fill"
            android:text="@string/btn_mul"
            android:textSize="30dp"
            android:onClick="onButtonClick_mul"
            android:textColor="#03A9F4"/>

        <Button android:text="@string/btn_6"
            android:textSize="30dp"
            android:onClick="onButtonClick_6"
            android:backgroundTint="#ffffff"/>

        <Button android:text="@string/btn_5"
            android:textSize="30dp"
            android:onClick="onButtonClick_5"
            android:backgroundTint="#ffffff"/>

        <Button android:text="@string/btn_4"
            android:textSize="30dp"
            android:onClick="onButtonClick_4"
            android:backgroundTint="#ffffff"/>

        <Button
            android:layout_gravity="fill"
            android:text="@string/btn_divide"
            android:textSize="30dp"
            android:onClick="onButtonClick_divide"
            android:textColor="#03A9F4"/>


        <Button android:text="@string/btn_1"
            android:textSize="30dp"
            android:onClick="onButtonClick_1"
            android:backgroundTint="#ffffff"/>

        <Button android:text="@string/btn_2"
            android:textSize="30dp"
            android:onClick="onButtonClick_2"
            android:backgroundTint="#ffffff"/>

        <Button android:text="@string/btn_3"
            android:textSize="30dp"
            android:onClick="onButtonClick_3"
            android:backgroundTint="#ffffff"/>

        <Button
            android:layout_rowSpan="2"
            android:textColor="#ffffff"
            android:layout_gravity="fill"
            android:backgroundTint="#03A9F4"
            android:onClick="onButtonClick_den"
            android:text="="
            android:textSize="30dp" />

        <Button android:text="@string/btn_0"
            android:textSize="30dp"
            android:onClick="onButtonClick_0"
            android:backgroundTint="#ffffff"
            />

        <Button android:text="@string/btn_00"
            android:textSize="30dp"
            android:onClick="onButtonClick_00"
            android:backgroundTint="#ffffff"/>

        <Button
            android:layout_width="wrap_content"
            android:text="@string/btn_point"
            android:textSize="30dp"
            android:onClick="onButtonClick_point"
            android:backgroundTint="#ffffff"/>





    </GridLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>