<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Length_conversion">
<LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/Length_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="长度转换"
            android:textSize="40dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/darkblue"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="47dp" />



        <Spinner
            android:id="@+id/spLength"
            android:paddingTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:duplicateParentState="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit11"
            />

        <Spinner
            android:id="@+id/spLength1"
            android:paddingTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:duplicateParentState="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit22"
            />



        <GridLayout
            android:paddingTop="20dp"
            android:id="@+id/gridLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textView"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:columnCount="4"
            android:rowCount="4"
            android:layout_margin="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">



            <Button android:text="@string/btn_7"
                android:textSize="30dp"
                android:id="@+id/bt_7"
                android:backgroundTint="#ffffff"/>

            <Button android:text="@string/btn_8"
                android:id="@+id/bt_8"
                android:textSize="30dp"
                android:backgroundTint="#ffffff"/>

            <Button android:text="@string/btn_9"
                android:id="@+id/bt_9"
                android:textSize="30dp"
                android:backgroundTint="#ffffff"/>

            <Button
                android:layout_gravity="fill"
                android:id="@+id/X"
                android:text="←"
                android:textSize="30dp"
                android:layout_rowSpan="2"
                android:textColor="#03A9F4"
                />


            <Button android:text="@string/btn_6"
                android:textSize="30dp"
                android:id="@+id/bt_6"
                android:backgroundTint="#ffffff"/>

            <Button android:text="@string/btn_5"
                android:textSize="30dp"
                android:id="@+id/bt_5"
                android:backgroundTint="#ffffff"/>

            <Button android:text="@string/btn_4"
                android:textSize="30dp"
                android:id="@+id/bt_4"
                android:backgroundTint="#ffffff"/>



            <Button android:text="@string/btn_1"
                android:id="@+id/bt_1"
                android:textSize="30dp"
                android:layout_column="0"
                android:backgroundTint="#ffffff"/>

            <Button android:text="@string/btn_2"
                android:id="@+id/bt_2"
                android:textSize="30dp"
                android:backgroundTint="#ffffff"/>

            <Button android:text="@string/btn_3"
                android:id="@+id/bt_3"
                android:textSize="30dp"
                android:backgroundTint="#ffffff"/>

            <Button
                android:id="@+id/CE"
                android:layout_rowSpan="2"
                android:layout_column="3"
                android:layout_gravity="fill"
                android:text="CE"
                android:textSize="30dp"
                android:textColor="#03A9F4"
                />


            <Button android:text="@string/btn_point"
                android:id="@+id/bt_point"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:textSize="30dp"
                android:backgroundTint="#ffffff"
                />

            <Button android:text="@string/btn_0"
                android:id="@+id/bt_0"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:textSize="30dp"
                android:backgroundTint="#ffffff"
                />










        </GridLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>